# point-eo

./: .gitignore  README.md  changelog.md  environment.yaml  pyproject.toml  setup.py
data/: demo_extent.dbf  demo_extent.shp  demo_extent.shx  s2_2018_lataseno.tif.aux.xml
docs/: demo.md  demo_notebook.ipynb  docs.md  docs_fin.md
src/point_eo/: __init__.py  cli.py
src/point_eo/scripts/: analysis.py  feature_selection.py  postprocess_prediction.py  predict.py  sample_raster.py
tests/: test_all.py
tests/data/analysis/: s2_2018_lataseno__points_clc__corine.csv  s2_2018_lataseno__points_clc__corine.geojson
tests/data/models/: tpot_demo__s2_2018_lataseno__points_clc__corine__2024-12-12T10-17-34_model.pkl  tpot_demo_acc0.6685_241209T171008.py
