[project]
name = "point-eo"
version = "0.1.0"
description = "Python library and module for training machine learning models on point-based EO data and large rasters. "
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dask>=2025.5.0",
    "joblib>=1.5.0",
    "matplotlib>=3.10.3",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
    "xarray>=2025.4.0",
    "tpot>=0.12.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]

[project.scripts]
point-eo = "point_eo.cli:main"
point_eo = "point_eo.cli:main"

[project.optional-dependencies]
test = [
    "pytest"
]
